assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
 body{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #3a3a3a;
    font-family: 'Lato' , sans-serif ;
}


/* Header */
header {
    background-color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2 #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;

}

header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: 'Oswald' , sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style: none;
}

#menu li {
    margin-bottom: 1em;   
}

.active {
    border-bottom: #3a3a3a;
}

/* Navbar styles with dropdown toggle*/
nav {
    position:absolute;
    background-color: #ffffff;
    padding: 0 1rem;
    z-index: 98;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    left: 0;
    display: none;
    top: 100%;
}

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label  {
    font-size: 2rem;
}

/* Main content */
main {
    background-color: lightblue;
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 47px;
}

/* Footer */
footer {
    background-color: orange;
}

/*Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    /*Header*/
    nav {
        display: block ;
        position: relative ;
        box-shadow: none;
        width: fit-content;
        padding: 1rem ;

    }
    #menu {
        display: flex;
    }
    #menu li {
        padding-left: 1rem;
    }
    .nav-toggle-label {
        display: none;
    }
}

